--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,16 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    healthcheck:
-      test: [ "CMD", "kafka-topics.sh", "--list", "--zookeeper", "zookeeper:2181" ]
-      interval: 5s
-      timeout: 10s
-      retries: 10
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui
+    container_name: kafka-ui
+    ports:
+      - "9093:8080"
+    restart: always
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
 
   zipkin:
     image: openzipkin/zipkin
@@ -67,11 +72,6 @@ services:
     environment:
       MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: http://zipkin:9411/api/v2/spans
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-    healthcheck:
-      test: "curl --fail --silent localhost:10010/actuator/health | grep UP || exit 1"
-      interval: 20s
-      timeout: 5s
-      retries: 10
     logging:
       driver: loki
       options:
@@ -88,11 +88,6 @@ services:
     environment:
       MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: http://zipkin:9411/api/v2/spans
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-    healthcheck:
-      test: "curl --fail --silent localhost:10011/actuator/health | grep UP || exit 1"
-      interval: 20s
-      timeout: 5s
-      retries: 10
     logging:
       driver: loki
       options:
@@ -108,11 +103,6 @@ services:
     environment:
       MANAGEMENT_ZIPKIN_TRACING_ENDPOINT: http://zipkin:9411/api/v2/spans
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-    healthcheck:
-      test: "curl --fail --silent localhost:10012/actuator/health | grep UP || exit 1"
-      interval: 20s
-      timeout: 5s
-      retries: 10
     logging:
       driver: loki
       options:
