--- a/pizza-shop-web-receiver/pom.xml
+++ b/pizza-shop-web-receiver/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>io.contino</groupId>
 	<artifactId>pizza-shop-web-receiver</artifactId>
-	<version>0.0.3</version>
+	<version>0.0.1</version>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -39,7 +39,7 @@
 		</dependency>
 		<dependency>
 			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-observation</artifactId>
+			<artifactId>micrometer-tracing</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.micrometer</groupId>
